# advancedCTraining

./: .gitignore  CMakeLists.txt  readme.txt
sources/AMazingNewFeatures/: Bind.cpp  ConstructorAndMemory.cpp  DecltypeandTypeid.cpp  DelegatingConstructors.cpp  ElisionandOptimalization.cpp  EnhancedForLoop.cpp  LValuesReferences.cpp  MoveAssignmentOperators.cpp  NestedTemplateClasses.cpp  RvalueReferences.cpp  autoKeyWord.cpp  c++98Init.cpp  crpt.cpp  dynamicCast.cpp  initializerList.cpp  moveConstructor.cpp  perfestForvarding.cpp  reinterpretCast.cpp  ring.h  sharedPointers.cpp  staticCast.cpp  uniquePointers.cpp
sources/ComplexNumber/: AcomplexNumberClass.cpp  CMakeLists.txt  Complex.h  complex.cpp
sources/FractalNumber/: Bitmap.cpp  Bitmap.h  BitmapFileHeader.cpp  CMakeLists.txt  FractalCreator.cpp  FractalCreator.h  RGB.cpp  RGB.h  bitmapFileHeader.h  bitmapInfoHeader.h  main.cpp  mandelBrot.cpp  mandelBrot.h  zoom.h  zoomList.cpp  zoomlist.h
sources/PassingFunctionsToFunctions/: AbstractClasses.cpp  FunctionsPointers.cpp  Functors.cpp  ObjectSlicingAndPolymorphism.cpp  usingFunctionsPointers.cpp
sources/exceptions/: basicExceptions.cpp  catchingSubclassExceptions.cpp  customException.cpp  standardExceptions.cpp
sources/files/: binaryFiles.cpp  parsingTextInFiles.cpp  readingTextFile.cpp  stats.txt  writingTextFile.cpp
sources/operatorOverloading/: OverloadingTheAssignmentOperator.cpp  OverloadingTheInsertionOperatorForPrinting.cpp
sources/overloadingComparisonOperators/: CMakeLists.txt  Complex.h  complex.cpp  overloadingComparisonOperators.cpp
(+36 files in other folders)
